fix Modal z-index

--- a/src/shared/components/Modal/modal.scss
+++ b/src/shared/components/Modal/modal.scss
@@ -1,6 +1,7 @@
 @import '../../styles/mixins.scss';
 
 .modal {
+  position: relative;
   display: flex;
   align-content: center;
   justify-content: center;
@@ -9,14 +10,14 @@
 .modal-content {
   position: fixed;
   display: flex;
-  align-content: center;
   flex-direction: column;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  justify-content: center;
-  background: #101d2bdb;
+  background: rgba(16, 29, 43, 0.92);
+  opacity: 1;
+  z-index: 1000;
 }
 
 .hideModalContent {
@@ -24,9 +25,7 @@
 }
 
 .showModalContent {
-  z-index: 2000;
-  animation: slide-rotate-hor-bott 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-    both;
+  animation: slide-rotate-hor-bott 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
 .model-open {
@@ -47,7 +46,8 @@
 .modal-close {
   display: flex;
   justify-content: flex-end;
-  margin: 0 2%;
+  padding: 1% 2%;
+  background: rgba(16, 29, 43, 0.99);
 }
 
 /**
@@ -55,16 +55,7 @@
  * animation slide-rotate-hor-top
  * ----------------------------------------
  */
-@-webkit-keyframes slide-rotate-hor-top {
-  0% {
-    -webkit-transform: translateY(0) rotateX(0deg);
-    transform: translateY(0) rotateX(0deg);
-  }
-  100% {
-    -webkit-transform: translateY(-150px) rotateX(-90deg);
-    transform: translateY(-150px) rotateX(-90deg);
-  }
-}
+
 @keyframes slide-rotate-hor-top {
   0% {
     -webkit-transform: translateY(0) rotateX(0deg);
@@ -81,23 +72,12 @@
  * animation slide-rotate-hor-bott
  * ----------------------------------------
  */
-@-webkit-keyframes slide-rotate-hor-bott {
-  0% {
-    -webkit-transform: translateY(-150px) rotateX(-90deg);
-    transform: translateY(-150px) rotateX(-90deg);
-    -webkit-transform: translateY(0) rotateX(0deg);
-    transform: translateY(0) rotateX(0deg);
-  }
-  100% {
-  }
-}
+
 @keyframes slide-rotate-hor-bott {
   0% {
-    -webkit-transform: translateY(-150px) rotateX(-90deg);
     transform: translateY(-150px) rotateX(-90deg);
   }
   100% {
-    -webkit-transform: translateY(0) rotateX(0deg);
     transform: translateY(0) rotateX(0deg);
   }
 }
