--- a/src/shared/components/VideoInfo/videoInfo.scss
+++ b/src/shared/components/VideoInfo/videoInfo.scss
@@ -19,7 +19,6 @@
   box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
   flex-direction: column;
-  z-index: 90;
   @include tablets() {
     justify-content: space-around;
     flex-direction: row;
@@ -92,36 +91,7 @@
   color: white;
   padding: 15px 25px 0 20px;
   border-radius: 5px;
-  // max-height: 600px;
-  // overflow: hidden;
-  // overflow-y: scroll;
 }
-
-// .content-text::-webkit-scrollbar-track {
-//   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-//   background-color: #131217;
-//   border-radius: 10px;
-// }
-
-// .content-text::-webkit-scrollbar {
-//   width: 10px;
-//   background-color: #131217;
-// }
-
-// .content-text::-webkit-scrollbar-thumb {
-//   background-color: #3366ff;
-//   border-radius: 10px;
-//   background-image: -webkit-linear-gradient(
-//     0deg,
-//     rgba(255, 255, 255, 0.5) 25%,
-//     transparent 25%,
-//     transparent 50%,
-//     rgba(255, 255, 255, 0.5) 50%,
-//     rgba(255, 255, 255, 0.5) 75%,
-//     transparent 75%,
-//     transparent
-//   );
-// }
 
 .video-page--raite,
 .video-page--year,
@@ -135,7 +105,7 @@
   font-size: 22px;
   margin: 15px 0;
   min-width: 100px;
-  box-shadow: 0px 13px 8px -9px rgb(218, 216, 212);
+  box-shadow: 0 13px 8px -9px rgb(218, 216, 212);
   @include tablets() {
     width: 100%;
     flex-flow: wrap column;
